--- a/verk2/index.html
+++ b/verk2/index.html
@@ -31,7 +31,7 @@
     </header>
     <main>
         <p>Spilabúðin selur spil, heldur viðburði og býður upp á skemmtilega stund. Kíktu á okkur á Spilagötu 1.</p>
-        <img src="./myndir/spilabudin.jpg" alt="Spilabúðin" width="800">
+        <img src="./myndir/spilabudin.jpg" alt="Spilabúðin" style="max-width: 60rem">
 
         <h3>Spil</h3>
         <p>Við seljum allskonar spil fyrir allskonar fólk
