--- a/verk2/sidur/vidburdir.html
+++ b/verk2/sidur/vidburdir.html
@@ -5,50 +5,82 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <title>Spilabúðin</title>
 
-    <meta property="og:title" content="Viðburðir - Spilabúðin" />
+    <meta property="og:title" content="Viðburðir" />
     <meta
       property="og:description"
-      content="Spilabúðin selur spil, heldur viðburði og býður upp á skemmtilega stund. Kíktu á okkur á Spilagötu 1."
+      content="Spilabúðin"
     />
     <meta property="og:image" content="myndir/sharing.jpg" />
   </head>
   <body>
     <header>
       <h1>Viðburðir</h1>
+      <a href="#efni">Beint í efni</a>
       <nav>
         <ul>
           <li>
-            <strong>Forsíða</strong>
+            <a href="../index.html">Forsíða</a>
           </li>
           <li>
-            <a href="./sidur/spil.html">Spilasíðu</a>
+            <a href="./spil.html">Spil</a>
           </li>
           <li>
-            <a href="./sidur/vidburdir.html">Viðburðir</a>
+            <strong>Viðburðir</strong>
           </li>
           <li>
-            <a href="./sidur/vidburdir.html">Skráning á viðburði</a>
+            <a href="./skraning.html">Skráning á viðburði</a>
           </li>
         </ul>
       </nav>
     </header>
 
-    <h3>Púslukvöld</h3>
-    <img src="../myndir/puzzle.jpg" alt="Púsl" style="max-width: 60rem"/>
+    <main id="efni">
+      <h3>Púslukvöld</h3>
+      <img src="../myndir/puzzle.jpg" alt="Púsl" style="max-width: 60rem" />
 
-    <p>
-      Komdu á púslukvöld í spilabúðina. Við bjóðum upp á púsluspil og góða
-      stemningu. Byrjum snemma og endum seint. Allt frá 50 bitum upp í 5000 bita
-      púsl.
-    </p>
-    <a href="./skraning.html">Skrá mig á púslukvöld</a>
+      <p>
+        Komdu á púslukvöld í spilabúðina. Við bjóðum upp á púsluspil og góða
+        stemningu. Byrjum snemma og endum seint. Allt frá 50 bitum upp í 5000
+        bita púsl.
+      </p>
+      <a href="./skraning.html">Skrá mig á púslukvöld</a>
 
-    <h3>Ticket to Ride</h3>
-    <img src="../myndir/ticket-to-ride.jpg" alt="Ticket to ride" style="max-width: 60rem"/>
-    <p>
-      Elskar þú lestir og leiki? Komdu á Ticket to Ride viðburð í spilabúðina.
-      Spilum allan daginn, bókaðu klukkustund eða lengur.
-      <a href="./skraning.html">Skrá mig á Ticket to Ride</a>
-    </p>
+      <h3>Ticket to Ride</h3>
+      <img
+        src="../myndir/ticket-to-ride.jpg"
+        alt="Ticket to ride"
+        style="max-width: 60rem"
+      />
+      <p>
+        Elskar þú lestir og leiki? Komdu á Ticket to Ride viðburð í spilabúðina.
+        Spilum allan daginn, bókaðu klukkustund eða lengur.
+        <a href="./skraning.html">Skrá mig á Ticket to Ride</a>
+      </p>
+      <a href="../index.html">Aftur á forsíðu</a>
+    </main>
+    <footer>
+      <h3>Opnunartími</h3>
+      <p>
+        Mánudagar Lokað Þriðjudagar til fimmtudags 14:00-22:00 Föstudaga
+        14:00-00:00 Laugardaga 12:00-00:00 Sunnudaga 12:00-22:00
+      </p>
+      <h3>Hér erum við</h3>
+      <p>
+        Spilabúðin ehf. Spilgata 1 101 Reykjavík Sími 123-4567
+        spilabudin@example.org
+      </p>
+      <h3>Samfélagsmiðlar</h3>
+      <ul>
+        <li>
+          <a href="https://www.facebook.com/HaskoliIslands/">Facebook</a>
+        </li>
+        <li>
+          <a href="https://www.youtube.com/user/HIvarp">YouTube</a>
+        </li>
+        <li>
+          <a href="https://www.instagram.com/haskoli_islands/">Instagram</a>
+        </li>
+      </ul>
+    </footer>
   </body>
 </html>
