--- a/verk2/sidur/skraning.html
+++ b/verk2/sidur/skraning.html
@@ -5,11 +5,58 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Spilabúðin</title>
 
-    <meta property="og:title" content="Forsíða - Spilabúðin">
-    <meta property="og:description" content="Spilabúðin selur spil, heldur viðburði og býður upp á skemmtilega stund. Kíktu á okkur á Spilagötu 1.">
+    <meta property="og:title" content="Skráning á viðburði">
+    <meta property="og:description" content="Spilabúðin">
     <meta property="og:image" content="myndir/sharing.jpg">
 </head>
 <body>
-    
-</body>
+    <header>
+      <h1>Skráning á viðburði</h1>
+      <a href="#efni">Beint í efni</a>
+      <nav>
+        <ul>
+          <li>
+            <a href="../index.html">Forsíða</a>
+          </li>
+          <li>
+            <a href="./spil.html">Spil</a>
+          </li>
+          <li>
+            <a href="./vidburdir.html">Viðburðir</a>
+          </li>
+          <li>
+            <strong>Skráning á viðburði</strong>
+          </li>
+        </ul>
+      </nav>
+    </header>
+
+    <main id="efni">
+      <a href="../index.html">Aftur á forsíðu</a>
+    </main>
+    <footer>
+      <h3>Opnunartími</h3>
+      <p>
+        Mánudagar Lokað Þriðjudagar til fimmtudags 14:00-22:00 Föstudaga
+        14:00-00:00 Laugardaga 12:00-00:00 Sunnudaga 12:00-22:00
+      </p>
+      <h3>Hér erum við</h3>
+      <p>
+        Spilabúðin ehf. Spilgata 1 101 Reykjavík Sími 123-4567
+        spilabudin@example.org
+      </p>
+      <h3>Samfélagsmiðlar</h3>
+      <ul>
+        <li>
+          <a href="https://www.facebook.com/HaskoliIslands/">Facebook</a>
+        </li>
+        <li>
+          <a href="https://www.youtube.com/user/HIvarp">YouTube</a>
+        </li>
+        <li>
+          <a href="https://www.instagram.com/haskoli_islands/">Instagram</a>
+        </li>
+      </ul>
+    </footer>
+  </body>
 </html>
