--- a/verk2/sidur/spil.html
+++ b/verk2/sidur/spil.html
@@ -12,6 +12,37 @@
   <body>
     <header>
       <h1>Spil</h1>
+
+      <p>Hjá Spilabúðinni eigum við öll helstu spilin! Hér eru vinsælustu spilin hjá okkur:</p>
+
+      <table style="max-width: 80rem;">
+        <tr>
+          <th>Númer</th>
+          <th>Nafn</th>
+          <th>Lýsing</th>
+          <th>Einkunn</th>
+          <th>Hlekkur</th>
+          <th>Verð</th>
+        </tr>
+        <tr>
+          <tr><td>1</td><td>"Brass: Birmingham (2018)"</td><td>"Build networks, grow industries, and navigate the world of the Industrial Revolution."</td><td>"8.414</td><td>https://boardgamegeek.com/boardgame/224517/brass-birmingham,brass.jpeg</td><td>12000</td></tr>
+          <tr><td>2</td><td>"Pandemic Legacy: Season 1 (2015)"</td><td>" "Mutating diseases are spreading around the world - can your team save humanity?"</td><td>"8.377</td><td>https://boardgamegeek.com/boardgame/161936/pandemic-legacy-season-1,pandemic.jpg</td><td>10000</td></tr>
+          <tr><td>3</td><td>"Gloomhaven (2017)"</td><td>"Vanquish monsters with strategic cardplay. Fulfill your quest to leave your legacy!"</td><td>"8.349</td><td>https://boardgamegeek.com/boardgame/174430/gloomhaven,gloomhaven.jpg</td><td>25000</td></tr>
+          <tr><td>4</td><td>"Ark Nova (2021)"</td><td>"Plan and build a modern, scientifically managed zoo to support conservation projects."</td><td>"8.335</td><td>https://boardgamegeek.com/boardgame/342942/ark-nova,arknova.jpg</td><td>8000</td></tr>
+          <tr><td>5</td><td>"Twilight Imperium: Fourth Edition (2017)"</td><td>"Build an intergalactic empire through trade, research, conquest and grand politics."</td><td>"8.239</td><td>https://boardgamegeek.com/boardgame/233078/twilight-imperium-fourth-edition,twilight-imperium.jpg</td><td>15000</td></tr>
+          <tr><td>6</td><td>"Dune: Imperium (2020)"</td><td>"Influence, intrigue, and combat in the universe of Dune."</td><td>"8.23</td><td>https://boardgamegeek.com/boardgame/316554/dune-imperium,dune.jpg</td><td>9000</td></tr>
+          <tr><td>7</td><td>"Terraforming Mars (2016)"</td><td>"Compete with rival CEOs to make Mars habitable and build your corporate empire."</td><td>"8.21</td><td>https://boardgamegeek.com/boardgame/167791/terraforming-mars,terraforming-mars.jpg</td><td>8500</td></tr>
+          <tr><td>8</td><td>"War of the Ring: Second Edition (2011)"</td><td>"The Fellowship and the Free Peoples clash with Sauron over the fate of Middle-earth."</td><td>"8.187</td><td>https://boardgamegeek.com/boardgame/115746/war-of-the-ring-second-edition,war-of-the-ring.jpg</td><td>11000</td></tr>
+          <tr><td>9</td><td>"Star Wars: Rebellion (2016)"</td><td>"Strike from your hidden base as the Rebels—or find and destroy it as the Empire."</td><td>"8.17</td><td>https://boardgamegeek.com/boardgame/187645/star-wars-rebellion,star-wars.jpg</td><td>9000</td></tr>
+          <tr><td>10</td><td>"Gloomhaven: Jaws of the Lion (2020)"</td><td>"Vanquish monsters with strategic cardplay in a 25-scenario Gloomhaven campaign."</td><td>"8.159</td><td>https://boardgamegeek.com/boardgame/291457/gloomhaven-jaws-of-the-lion,gloomhaven-jaws</td><td>10000</td></tr>
+          <tr><td>11</td><td>"Spirit Island (2017)"</td><td>"Island Spirits join forces using elemental powers to defend their home from invaders."</td><td>"8.145</td><td>https://boardgamegeek.com/boardgame/162886/spirit-island,spirit-island.jpg</td><td>5000</td></tr>
+          <tr><td>12</td><td>"Gaia Project (2017)"</td><td>"Expand, research, upgrade, and settle the galaxy with one of 14 alien species."</td><td>"8.111</td><td>https://boardgamegeek.com/boardgame/220308/gaia-project,gaia-project.jpg</td><td>3000</td></tr>
+          <tr><td>13</td><td>"Twilight Struggle (2005)"</td><td>"Relive the Cold War and rewrite history in an epic clash between the USA and USSR."</td><td>"8.066</td><td>https://boardgamegeek.com/boardgame/12333/twilight-struggle,twilight-struggle.jpg</td><td>6000</td></tr>
+          <tr><td>14</td><td>"Through the Ages: A New Story of Civilization (2015)"</td><td>"Rewrite history as you build up your civilization in this epic card drafting game!"</td><td>"8.055</td><td>https://boardgamegeek.com/boardgame/182028/through-the-ages-a-new-story-of-civilization,through-the-ages.jpg</td><td>8000</td></tr>
+          <tr><td>15</td><td>"Great Western Trail (2016)"</td><td>"Use strategic outposts and navigate danger as you herd your cattle to Kansas City."</td><td>"8.022</td><td>https://boardgamegeek.com/boardgame/193738/great-western-trail,great-western-trail.jpg</td><td>10500</td></tr>
+        </tr>
+      </table>
+
       <a href="#efni">Beint í efni</a>
       <nav>
         <ul>
