--- a/verk2/index.html
+++ b/verk2/index.html
@@ -10,75 +10,77 @@
     <meta property="og:image" content="myndir/sharing.jpg" />
   </head>
   <body>
-    <header>
-      <h1>Spilabúðin!</h1>
-      <a href="#efni">Beint í efni</a>
-      <nav>
+    <div class="wrapper">  
+      <header>
+        <h1>Spilabúðin!</h1>
+        <a href="#efni">Beint í efni</a>
+        <nav>
+          <ul>
+            <li>
+              <strong>Forsíða</strong>
+            </li>
+            <li>
+              <a href="./sidur/spil.html">Spilasíða</a>
+            </li>
+            <li>
+              <a href="./sidur/vidburdir.html">Viðburðir</a>
+            </li>
+            <li>
+              <a href="./sidur/skraning.html">Skráning á viðburði</a>
+            </li>
+          </ul>
+        </nav>
+      </header>
+
+      <main id="efni">
+        <p>
+          Spilabúðin selur spil, heldur viðburði og býður upp á skemmtilega stund.
+          Kíktu á okkur á Spilagötu 1.
+        </p>
+        <img
+          src="./myndir/spilabudin.jpg"
+          alt="Spilabúðin"
+          style="max-width: 60rem"
+        />
+
+        <h3>Spil</h3>
+        <p>
+          Við seljum allskonar spil fyrir allskonar fólk
+          <a href="./sidur/spil.html">Skoðaðu spila úrvalið</a>
+        </p>
+
+        <h3>Viðburðir</h3>
+        <p>
+          Við höldum reglulega viðburði.
+          <a href="./sidur/vidburdir.html">Skoðaðu viðburði</a>
+          eða
+          <a href="./sidur/skraning.html">skráðu þig á viðburð</a>
+        </p>
+      </main>
+      <footer>
+        <h3>Opnunartími</h3>
+        <p>
+          Mánudagar Lokað Þriðjudagar til fimmtudags 14:00-22:00 Föstudaga
+          14:00-00:00 Laugardaga 12:00-00:00 Sunnudaga 12:00-22:00
+        </p>
+        <h3>Hér erum við</h3>
+        <p>
+          Spilabúðin ehf. Spilgata 1 101 Reykjavík Sími 123-4567
+          spilabudin@example.org
+        </p>
+        <h3>Samfélagsmiðlar</h3>
         <ul>
           <li>
-            <strong>Forsíða</strong>
+            <a href="https://www.facebook.com/HaskoliIslands/">Facebook</a>
           </li>
           <li>
-            <a href="./sidur/spil.html">Spilasíða</a>
+            <a href="https://www.youtube.com/user/HIvarp">YouTube</a>
           </li>
           <li>
-            <a href="./sidur/vidburdir.html">Viðburðir</a>
-          </li>
-          <li>
-            <a href="./sidur/skraning.html">Skráning á viðburði</a>
+            <a href="https://www.instagram.com/haskoli_islands/">Instagram</a>
           </li>
         </ul>
-      </nav>
-    </header>
-
-    <main id="efni">
-      <p>
-        Spilabúðin selur spil, heldur viðburði og býður upp á skemmtilega stund.
-        Kíktu á okkur á Spilagötu 1.
-      </p>
-      <img
-        src="./myndir/spilabudin.jpg"
-        alt="Spilabúðin"
-        style="max-width: 60rem"
-      />
-
-      <h3>Spil</h3>
-      <p>
-        Við seljum allskonar spil fyrir allskonar fólk
-        <a href="./sidur/spil.html">Skoðaðu spila úrvalið</a>
-      </p>
-
-      <h3>Viðburðir</h3>
-      <p>
-        Við höldum reglulega viðburði.
-        <a href="./sidur/vidburdir.html">Skoðaðu viðburði</a>
-        eða
-        <a href="./sidur/skraning.html">skráðu þig á viðburð</a>
-      </p>
-    </main>
-    <footer>
-      <h3>Opnunartími</h3>
-      <p>
-        Mánudagar Lokað Þriðjudagar til fimmtudags 14:00-22:00 Föstudaga
-        14:00-00:00 Laugardaga 12:00-00:00 Sunnudaga 12:00-22:00
-      </p>
-      <h3>Hér erum við</h3>
-      <p>
-        Spilabúðin ehf. Spilgata 1 101 Reykjavík Sími 123-4567
-        spilabudin@example.org
-      </p>
-      <h3>Samfélagsmiðlar</h3>
-      <ul>
-        <li>
-          <a href="https://www.facebook.com/HaskoliIslands/">Facebook</a>
-        </li>
-        <li>
-          <a href="https://www.youtube.com/user/HIvarp">YouTube</a>
-        </li>
-        <li>
-          <a href="https://www.instagram.com/haskoli_islands/">Instagram</a>
-        </li>
-      </ul>
-    </footer>
+      </footer>
+    </div>
   </body>
 </html>
