--- a/verk3/sidur/skraning.html
+++ b/verk3/sidur/skraning.html
@@ -10,14 +10,16 @@
   <meta property="og:description"
     content="Spilabúðin selur spil, heldur viðburði og býður upp á skemmtilega stund. Kíktu á okkur á Spilagötu 1.">
   <meta property="og:image" content="/myndir/sharing.jpg">
+  <link rel="stylesheet" href="../styles.css">
 </head>
 
 <body>
+  <div class="wrapper">
   <header>
-    <h1>Spilabúðin—Skráning á viðburði</h1>
+    <h1 class="head">Spilabúðin — Skráning á viðburði</h1>
   </header>
 
-  <p><a href="#efni">Beint í efni</a></p>
+  <p class="sr-only"><a href="#efni">Beint í efni</a></p>
 
   <nav>
     <ul>
@@ -130,6 +132,7 @@
     </form>
   </main>
 
+  <div class="footer_container">
   <footer>
     <section>
       <h2>Opnunartími</h2>
@@ -149,7 +152,7 @@
 
     <section>
       <h2>Hér erum við</h2>
-      <ul>
+      <ul class="footer_ul">
         <li>Spilabúðin ehf.</li>
         <li>Spilagata 1 10</li>
         <li>101 Reykjavík</li>
@@ -162,13 +165,15 @@
 
     <section>
       <h2>Samfélagsmiðlar</h2>
-      <ul>
+      <ul class="footer_ul">
         <li><a href="https://www.facebook.com/HaskoliIslands/">Facebook</a></li>
         <li><a href="https://www.youtube.com/user/HIvarp">YouTube</a></li>
         <li><a href="https://www.instagram.com/haskoli_islands/">Instagram</a></li>
       </ul>
     </section>
   </footer>
+</div>
+</div>
 </body>
 
 </html>
