--- a/verk3/sidur/spil.html
+++ b/verk3/sidur/spil.html
@@ -8,6 +8,7 @@
   <meta property="og:title" content="Spilabúðin">
   <meta property="og:description" content="Spilaúrval hjá Spilabúðinni">
   <meta property="og:image" content="/myndir/sharing.jpg">
+  <link rel="stylesheet" href="../styles.css">
 </head>
 
 <body>
