--- a/verk3/sidur/vidburdir.html
+++ b/verk3/sidur/vidburdir.html
@@ -10,6 +10,7 @@
   <meta property="og:description"
     content="Næstu viðburðir hjá Spilabúðinni.">
   <meta property="og:image" content="/myndir/sharing.jpg">
+  <link rel="stylesheet" href="../styles.css">
 </head>
 
 <body>
