--- a/verk3/sidur/vidburdir.html
+++ b/verk3/sidur/vidburdir.html
@@ -14,11 +14,12 @@
 </head>
 
 <body>
+  <div class="wrapper">
   <header>
-    <h1>Spilabúðin—Viðburðir</h1>
+    <h1 class="head">Spilabúðin—Viðburðir</h1>
   </header>
 
-  <p><a href="#efni">Beint í efni</a></p>
+  <p class="sr-only"><a href="#efni">Beint í efni</a></p>
 
   <nav>
     <ul>
@@ -45,45 +46,48 @@
     </section>
   </main>
 
-  <footer>
-    <section>
-      <h2>Opnunartími</h2>
-      <dl>
-        <dt>Mánudagar</dt>
-        <dd>Lokað</dd>
-        <dt>Þriðjudagar til fimmtudags</dt>
-        <dd>14:00–22:00</dd>
-        <dt>Föstudaga</dt>
-        <dd>14:00–00:00</dd>
-        <dt>Laugardaga</dt>
-        <dd>12:00–00:00</dd>
-        <dt>Sunnudaga</dt>
-        <dd>12:00–22:00</dd>
-      </dl>
-    </section>
+  <div class="footer_container">
+    <footer>
+      <section>
+        <h2>Opnunartími</h2>
+        <dl>
+          <dt>Mánudagar</dt>
+          <dd>Lokað</dd>
+          <dt>Þriðjudagar til fimmtudags</dt>
+          <dd>14:00–22:00</dd>
+          <dt>Föstudaga</dt>
+          <dd>14:00–00:00</dd>
+          <dt>Laugardaga</dt>
+          <dd>12:00–00:00</dd>
+          <dt>Sunnudaga</dt>
+          <dd>12:00–22:00</dd>
+        </dl>
+      </section>
 
-    <section>
-      <h2>Hér erum við</h2>
-      <ul>
-        <li>Spilabúðin ehf.</li>
-        <li>Spilagata 1 10</li>
-        <li>101 Reykjavík</li>
-        <li><a href="tel:1234567">Sími 123-4567</a></li>
-        <li>
-          <a href="mailto:spilabudin@example.org">spilabudin@example.org</a>
-        </li>
-      </ul>
-    </section>
+      <section>
+        <h2>Hér erum við</h2>
+        <ul class="footer_ul">
+          <li>Spilabúðin ehf.</li>
+          <li>Spilagata 1 10</li>
+          <li>101 Reykjavík</li>
+          <li><a href="tel:1234567">Sími 123-4567</a></li>
+          <li>
+            <a href="mailto:spilabudin@example.org">spilabudin@example.org</a>
+          </li>
+        </ul>
+      </section>
 
-    <section>
-      <h2>Samfélagsmiðlar</h2>
-      <ul>
-        <li><a href="https://www.facebook.com/HaskoliIslands/">Facebook</a></li>
-        <li><a href="https://www.youtube.com/user/HIvarp">YouTube</a></li>
-        <li><a href="https://www.instagram.com/haskoli_islands/">Instagram</a></li>
-      </ul>
-    </section>
-  </footer>
+      <section>
+        <h2>Samfélagsmiðlar</h2>
+        <ul class="footer_ul">
+          <li><a href="https://www.facebook.com/HaskoliIslands/">Facebook</a></li>
+          <li><a href="https://www.youtube.com/user/HIvarp">YouTube</a></li>
+          <li><a href="https://www.instagram.com/haskoli_islands/">Instagram</a></li>
+        </ul>
+      </section>
+    </footer>
+  </div>
+</div>
 </body>
 
 </html>
